--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,7 @@
         "react": "^18.0.1",
         "react-dom": "^18.0.1",
         "react-drag-drop-files": "^2.3.7",
-        "react-scripts": "4.0.1"
+        "react-scripts": "^5.0.1"
     },
     "scripts": {
         "start": "react-scripts start",
